# loom

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  buf.yaml  clippy.toml  deny.toml  openapi.json  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/loom/: Cargo.toml
crates/loom-agentproto/: Cargo.toml
crates/loom-agentproto/src/: bridge.rs  clock.rs  enroll.rs  event.rs  lib.rs  quic.rs  session.rs  terminator.rs  testing.rs  wss.rs
crates/loom-agentproto/src/bootstrap/: ca.rs  error.rs  mod.rs  secrets.rs  token.rs
crates/loom-agentproto/tests/: bootstrap.rs  enrollment.rs
crates/loom-bus/: Cargo.toml
crates/loom-bus/src/: bus.rs  inproc.rs  lib.rs  message.rs  relay.rs  testing.rs  topic.rs
crates/loom-bus/tests/: delivery.rs  relay.rs
crates/loom-core/: Cargo.toml
crates/loom-core/src/: attempt.rs  capability.rs  fencing.rs  ids.rs  job.rs  lease.rs  lib.rs  node.rs  scheduler.rs  time.rs  usage.rs
crates/loom-core/tests/: properties.rs
crates/loom-gateway/: Cargo.toml
crates/loom-gateway/src/: lib.rs
crates/loom-hostd/: Cargo.toml
crates/loom-hostd/src/: clock.rs  config.rs  connect.rs  enroll.rs  identity.rs  lib.rs  main.rs  testsupport.rs  transport.rs  wire.rs
crates/loom-hostd/tests/: enrollment.rs
crates/loom-proto/: Cargo.toml  build.rs
crates/loom-proto/src/: codec.rs  golden.rs  lib.rs
crates/loom-proto/tests/: golden_vectors.rs
crates/loom-sandbox/: Cargo.toml
crates/loom-sandbox/src/: conformance.rs  driver.rs  egress.rs  fake.rs  lib.rs  limits.rs  process.rs  spec.rs
crates/loom-sandbox/tests/: lifecycle_fake.rs  lifecycle_process.rs
crates/loom-store/: Cargo.toml
crates/loom-store/src/: conformance.rs  error.rs  fake.rs  lib.rs  migrate.rs  records.rs  sqlite.rs  store.rs
crates/loom-store/tests/: conformance_fake.rs  conformance_sqlite.rs
crates/loom/src/: main.rs
crates/loomd/: Cargo.toml
crates/loomd/src/: main.rs
docs/: README.md
docs/adr/: 0001-rust-single-binary-host-agent.md  0002-cloud-hypervisor-vfio-microvm-tier.md  0003-tiered-isolation.md  0004-no-kubernetes-control-plane.md  0005-outbound-only-connectivity.md  0006-gateway-identity-stripping.md  0007-ephemeral-everything-teardown.md  0008-confidential-tier-c.md  0009-vllm-primary-inference-engine.md  0010-curated-runtime-images.md  0011-single-node-scope.md  0012-fixed-pricing-fiat-only.md  0013-single-binary-self-host-control-plane.md  0014-deployment-profiles-marketplace-optional.md  0015-pluggable-compute-backends.md  README.md
docs/architecture/: design-review.md  external-review.md  overview.md  profiles.md
docs/ml-lifecycle/: data.md  environments.md  evaluation.md  recipes.md  serving.md  training.md
docs/platform/: agent-protocol.md  backend.md  compute-backends.md  control-plane.md  host-agent.md  isolation.md  networking.md  renter-api.md  security.md
docs/product/: deployment.md  marketplace.md  roadmap.md  self-host.md  unit-economics.md
images/: README.md
migrations/: 0001_init.sql  README.md
proto/: README.md  buf.yaml
proto/loom/v1/: common.proto  enrollment.proto  envelope.proto  health.proto  job.proto  log.proto
python/loom-ckpt/: README.md
scripts/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs  mock.rs  openapi.rs
