[package]
name        = "xtask"
description = "cargo-xtask dev tooling: codegen, golden regen, migrate, images, release. Never ships in a release."
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
anyhow.workspace     = true
axum.workspace       = true
clap.workspace       = true
loom-proto.workspace = true
serde_json.workspace = true
tokio.workspace      = true

[dev-dependencies]
tower.workspace = true
