[package]
name        = "loom-agentproto"
description = "Server-side agent-gateway session logic: QUIC/WSS terminator (PR-09)"
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
loom-proto.workspace = true
loom-core.workspace  = true
loom-store.workspace = true
loom-bus.workspace   = true
# PR-26 bootstrap-auth: local CA + node-cert signing, enrollment/admin tokens, secrets file.
rcgen.workspace     = true
getrandom.workspace = true
hex.workspace       = true
hmac.workspace      = true
sha2.workspace      = true
thiserror.workspace = true
serde       = { workspace = true }
toml.workspace      = true

[dev-dependencies]
# the bootstrap proving test drives the async store persistence path and verifies
# a signed node cert chains cryptographically back to the freshly-minted CA.
loom-store  = { workspace = true, features = ["test-support"] }
tokio       = { workspace = true }
tempfile.workspace    = true
x509-parser = { workspace = true, features = ["verify"] }   # `verify` enables cryptographic signature checking (leaf→CA)

[features]
test-support = []

