[package]
name        = "loom-bus"
description = "Bus trait + InProcBus + outbox relay (PR-06)"
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
loom-core.workspace  = true
loom-store.workspace = true

[features]
test-support = []

