[package]
name        = "loom-bus"
description = "Bus trait + InProcBus + outbox relay (PR-06)"
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
loom-core.workspace   = true
loom-store.workspace  = true
async-trait.workspace = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true

[dev-dependencies]
# the relay/reconcile tests drive the real Store seam through its in-crate fake
loom-store = { workspace = true, features = ["test-support"] }

[features]
# fakes ship inside the crate that defines the trait (workspace-setup.md §6)
test-support = []
