[package]
name        = "loom-core"
description = "Domain types + pure state machines — zero I/O (PR-03)"
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
# typed library errors (thiserror in libs; loom-core stays otherwise dependency-free)
thiserror.workspace = true

