[package]
name        = "loom-gateway"
description = "OpenAI-compatible inference proxy, embedded in loomd (PR-19)"
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[features]
test-support = []

