[package]
name        = "loom-proto"
description = "Wire schema: prost codegen, envelope codec, golden vectors (PR-02)"
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
prost.workspace     = true
thiserror.workspace = true

[dev-dependencies]
# The `golden_vectors` integration test imports `prost::Message` directly; declare
# the dependency explicitly rather than leaning on the transitive `[dependencies]` edge.
prost.workspace = true

[build-dependencies]
prost-build.workspace = true
protox.workspace      = true
