[package]
name        = "loom-sandbox"
description = "SandboxDriver trait + drivers: ProcessDriver (macOS/MLX), hardened runc (PR-07)"
publish     = false
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

# Own lints table (cannot partially override an inherited one): identical to the
# workspace set EXCEPT unsafe_code, relaxed forbid->deny — the seccomp/cgroup/netns
# FFI needs `unsafe`, reviewed per use (workspace-setup.md §2).
[lints.rust]
warnings    = { level = "deny", priority = -1 }
unsafe_code = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
all         = { level = "deny", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
unwrap_used = "deny"

[features]
test-support = []
