[package]
name        = "loom"
description = "The CLI — renter + host + admin verbs. Thin HTTP client; deliberately links no server libs (PR-10)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

